Fixed main menu width to prevent text wrapping with some languages
git-svn-id: http://svg-edit.googlecode.com/svn/trunk@1914 eee81c28-f429-11dd-99c0-75d572ba1ddd

--- a/editor/svg-editor.css
+++ b/editor/svg-editor.css
@@ -411,7 +411,7 @@
 	z-index: 12;
 	background: #E8E8E8;
 	position: relative;
-	width: 200px;
+	width: 230px;
 	padding: 5px;
 	-moz-box-shadow: #555 1px 1px 4px;
 	-webkit-box-shadow: #555 1px 1px 4px;
